manifests/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plugnmeet-frontent-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000  
      targetPort: 3000
      name: tcp
      nodePort: 31492
  selector:
    app: plugnmeet-frontent
